--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 
@@ -11,7 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-    <title>Assignmetn class 20</title>
+        <link rel="stylesheet" href="./style.css" class="css">
+    <title>Assignmetn 20</title>
     <style>
         .wrapper {
             width: 80%;
@@ -36,7 +36,14 @@
             height: 200px;
             overflow: scroll;
         }
-       
+        .wrapper1{
+            width: 100%;
+            margin: auto;
+        }
+        .section9{
+            background-color: #e3f2fd;
+            padding: 5px;
+        }
     </style>
 
 </head>
@@ -381,7 +388,7 @@
         </div>
     </div>
     <div class="section9">
-        <div class="wrapper">
+        <div class="wrapper1">
             <div class="footer bg-primary text-center p-3 text-white fs-1">
                 <p>O All right reserved design by LFWF</p>
             </div>
